err.txt
ninja: Entering directory `build'
[1/3] Building CXX object tests/CMakeFiles/qulacs_test.dir/gate/gate_test.cpp.o
FAILED: tests/CMakeFiles/qulacs_test.dir/gate/gate_test.cpp.o 
/usr/bin/g++ -DKOKKOS_DEPENDENCE -DOPENMP -I../qulacs -I_deps/eigen_fetch-src -Ibuild/_deps/kokkos_fetch-src -Ibuild/_deps/kokkos_fetch-src/core/src -I_deps/kokkos_fetch-src/core/src -I_deps/kokkos_fetch-src/core/src/../../tpls/desul/include -Ibuild/_deps/kokkos_fetch-src/containers/src -I_deps/kokkos_fetch-src/containers/src -Ibuild/_deps/kokkos_fetch-src/algorithms/src -I_deps/kokkos_fetch-src/algorithms/src -Ibuild/_deps/kokkos_fetch-src/simd/src -I_deps/kokkos_fetch-src/simd/src -isystem _deps/googletest_fetch-src/googletest/include -isystem _deps/googletest_fetch-src/googletest -pthread -fopenmp -O3 -DNDEBUG -fPIE -fopenmp -std=gnu++2a -MD -MT tests/CMakeFiles/qulacs_test.dir/gate/gate_test.cpp.o -MF tests/CMakeFiles/qulacs_test.dir/gate/gate_test.cpp.o.d -o tests/CMakeFiles/qulacs_test.dir/gate/gate_test.cpp.o -c ../tests/gate/gate_test.cpp
../tests/gate/gate_test.cpp: In function ‘void qulacs::run_random_gate_apply(qulacs::UINT, std::function<Eigen::Matrix<std::complex<double>, -1, -1>(double, double, double)>)’:
../tests/gate/gate_test.cpp:86:54: error: ‘U1’ was not declared in this scope; did you mean ‘P1’?
   86 |         if (typeid(QuantumGateConstructor) == typeid(U1)) {
      |                                                      ^~
      |                                                      P1
../tests/gate/gate_test.cpp:90:61: error: ‘U2’ was not declared in this scope
   90 |         } else if (typeid(QuantumGateConstructor) == typeid(U2)) {
      |                                                             ^~
../tests/gate/gate_test.cpp:93:61: error: ‘U3’ was not declared in this scope
   93 |         } else if (typeid(QuantumGateConstructor) == typeid(U3)) {
      |                                                             ^~
../tests/gate/gate_test.cpp: In member function ‘virtual void qulacs::GateTest_ApplyU1_Test::TestBody()’:
../tests/gate/gate_test.cpp:129:49: error: ‘U1’ was not declared in this scope; did you mean ‘P1’?
  129 | TEST(GateTest, ApplyU1) { run_random_gate_apply<U1>(5, make_U); }
      |                                                 ^~
      |                                                 P1
../tests/gate/gate_test.cpp:129:62: error: no matching function for call to ‘run_random_gate_apply<<expression error> >(int, Eigen::MatrixXcd (&)(double, double, double))’
  129 | TEST(GateTest, ApplyU1) { run_random_gate_apply<U1>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp:19:6: note: candidate: ‘template<class QuantumGateConstructor> void qulacs::run_random_gate_apply(qulacs::UINT, std::function<Eigen::Matrix<std::complex<double>, -1, -1>()>)’
   19 | void run_random_gate_apply(UINT n_qubits, std::function<Eigen::MatrixXcd()> matrix_factory) {
      |      ^~~~~~~~~~~~~~~~~~~~~
../tests/gate/gate_test.cpp:19:6: note:   template argument deduction/substitution failed:
../tests/gate/gate_test.cpp:129:62: error: template argument 1 is invalid
  129 | TEST(GateTest, ApplyU1) { run_random_gate_apply<U1>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp:44:6: note: candidate: ‘template<class QuantumGateConstructor> void qulacs::run_random_gate_apply(qulacs::UINT, std::function<Eigen::Matrix<std::complex<double>, -1, -1>(double)>)’
   44 | void run_random_gate_apply(UINT n_qubits, std::function<Eigen::MatrixXcd(double)> matrix_factory) {
      |      ^~~~~~~~~~~~~~~~~~~~~
../tests/gate/gate_test.cpp:44:6: note:   template argument deduction/substitution failed:
../tests/gate/gate_test.cpp:129:62: error: template argument 1 is invalid
  129 | TEST(GateTest, ApplyU1) { run_random_gate_apply<U1>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp:70:6: note: candidate: ‘template<class QuantumGateConstructor> void qulacs::run_random_gate_apply(qulacs::UINT, std::function<Eigen::Matrix<std::complex<double>, -1, -1>(double, double, double)>)’
   70 | void run_random_gate_apply(UINT n_qubits,
      |      ^~~~~~~~~~~~~~~~~~~~~
../tests/gate/gate_test.cpp:70:6: note:   template argument deduction/substitution failed:
../tests/gate/gate_test.cpp:129:62: error: template argument 1 is invalid
  129 | TEST(GateTest, ApplyU1) { run_random_gate_apply<U1>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp: In member function ‘virtual void qulacs::GateTest_ApplyU2_Test::TestBody()’:
../tests/gate/gate_test.cpp:130:49: error: ‘U2’ was not declared in this scope
  130 | TEST(GateTest, ApplyU2) { run_random_gate_apply<U2>(5, make_U); }
      |                                                 ^~
../tests/gate/gate_test.cpp:130:62: error: no matching function for call to ‘run_random_gate_apply<<expression error> >(int, Eigen::MatrixXcd (&)(double, double, double))’
  130 | TEST(GateTest, ApplyU2) { run_random_gate_apply<U2>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp:19:6: note: candidate: ‘template<class QuantumGateConstructor> void qulacs::run_random_gate_apply(qulacs::UINT, std::function<Eigen::Matrix<std::complex<double>, -1, -1>()>)’
   19 | void run_random_gate_apply(UINT n_qubits, std::function<Eigen::MatrixXcd()> matrix_factory) {
      |      ^~~~~~~~~~~~~~~~~~~~~
../tests/gate/gate_test.cpp:19:6: note:   template argument deduction/substitution failed:
../tests/gate/gate_test.cpp:130:62: error: template argument 1 is invalid
  130 | TEST(GateTest, ApplyU2) { run_random_gate_apply<U2>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp:44:6: note: candidate: ‘template<class QuantumGateConstructor> void qulacs::run_random_gate_apply(qulacs::UINT, std::function<Eigen::Matrix<std::complex<double>, -1, -1>(double)>)’
   44 | void run_random_gate_apply(UINT n_qubits, std::function<Eigen::MatrixXcd(double)> matrix_factory) {
      |      ^~~~~~~~~~~~~~~~~~~~~
../tests/gate/gate_test.cpp:44:6: note:   template argument deduction/substitution failed:
../tests/gate/gate_test.cpp:130:62: error: template argument 1 is invalid
  130 | TEST(GateTest, ApplyU2) { run_random_gate_apply<U2>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp:70:6: note: candidate: ‘template<class QuantumGateConstructor> void qulacs::run_random_gate_apply(qulacs::UINT, std::function<Eigen::Matrix<std::complex<double>, -1, -1>(double, double, double)>)’
   70 | void run_random_gate_apply(UINT n_qubits,
      |      ^~~~~~~~~~~~~~~~~~~~~
../tests/gate/gate_test.cpp:70:6: note:   template argument deduction/substitution failed:
../tests/gate/gate_test.cpp:130:62: error: template argument 1 is invalid
  130 | TEST(GateTest, ApplyU2) { run_random_gate_apply<U2>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp: In member function ‘virtual void qulacs::GateTest_ApplyU3_Test::TestBody()’:
../tests/gate/gate_test.cpp:131:49: error: ‘U3’ was not declared in this scope
  131 | TEST(GateTest, ApplyU3) { run_random_gate_apply<U3>(5, make_U); }
      |                                                 ^~
../tests/gate/gate_test.cpp:131:62: error: no matching function for call to ‘run_random_gate_apply<<expression error> >(int, Eigen::MatrixXcd (&)(double, double, double))’
  131 | TEST(GateTest, ApplyU3) { run_random_gate_apply<U3>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp:19:6: note: candidate: ‘template<class QuantumGateConstructor> void qulacs::run_random_gate_apply(qulacs::UINT, std::function<Eigen::Matrix<std::complex<double>, -1, -1>()>)’
   19 | void run_random_gate_apply(UINT n_qubits, std::function<Eigen::MatrixXcd()> matrix_factory) {
      |      ^~~~~~~~~~~~~~~~~~~~~
../tests/gate/gate_test.cpp:19:6: note:   template argument deduction/substitution failed:
../tests/gate/gate_test.cpp:131:62: error: template argument 1 is invalid
  131 | TEST(GateTest, ApplyU3) { run_random_gate_apply<U3>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp:44:6: note: candidate: ‘template<class QuantumGateConstructor> void qulacs::run_random_gate_apply(qulacs::UINT, std::function<Eigen::Matrix<std::complex<double>, -1, -1>(double)>)’
   44 | void run_random_gate_apply(UINT n_qubits, std::function<Eigen::MatrixXcd(double)> matrix_factory) {
      |      ^~~~~~~~~~~~~~~~~~~~~
../tests/gate/gate_test.cpp:44:6: note:   template argument deduction/substitution failed:
../tests/gate/gate_test.cpp:131:62: error: template argument 1 is invalid
  131 | TEST(GateTest, ApplyU3) { run_random_gate_apply<U3>(5, make_U); }
      |                                                              ^
../tests/gate/gate_test.cpp:70:6: note: candidate: ‘template<class QuantumGateConstructor> void qulacs::run_random_gate_apply(qulacs::UINT, std::function<Eigen::Matrix<std::complex<double>, -1, -1>(double, double, double)>)’
   70 | void run_random_gate_apply(UINT n_qubits,
      |      ^~~~~~~~~~~~~~~~~~~~~
../tests/gate/gate_test.cpp:70:6: note:   template argument deduction/substitution failed:
../tests/gate/gate_test.cpp:131:62: error: template argument 1 is invalid
  131 | TEST(GateTest, ApplyU3) { run_random_gate_apply<U3>(5, make_U); }
      |                                                              ^
ninja: build stopped: subcommand failed.
